--- a/tuple-append-instances.cabal
+++ b/tuple-append-instances.cabal
@@ -17,8 +17,10 @@ library
   hs-source-dirs:      src
   exposed-modules:
       Data.Tuple.Append.Instances.ByteString
+    , Data.Tuple.Append.Instances.ByteString.Safe
     , Data.Tuple.Append.Instances.DList
     , Data.Tuple.Append.Instances.Text
+    , Data.Tuple.Append.Instances.Text.Safe
     , Data.Tuple.Append.Instances.Vector
   build-depends:
       base >= 4.7 && < 5
